--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     text-decoration: none;
     justify-content: space-between;
-    font-size: 20px;
+    font-size: 24px;
    
 
 }
@@ -38,6 +38,7 @@ a {
     justify-content: center;
     gap: 40px;
     margin-top: 200px;
+    align-content: center;
 }
 .title {
     font-size: xx-large;
@@ -55,13 +56,22 @@ button {
     color: #F9FAF8;
     border-radius: 15%;
 }
+.container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+    margin-top: 0px;
+    
+}
 .header2 {
     color: black;
     margin-top: 50px;
     text-align: center;
     font-size: 36px;
     font-weight: bolder;
-    
+    padding-bottom: 10px;
 }
 .main {
     display: flex;
@@ -76,4 +86,41 @@ img {
   }
   .info {
     max-width: 200px;
+  }
+  .container3 {
+    display: flex;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-content: center;
+    padding: 100px;
+  }
+  .quote {
+    display: flex;
+    flex-direction: column;
+    font-size: 36px;
+    max-width: 800px;
+    font-style: italic;
+    color: #1F2937;
+    align-content: center;
+    text-align: center;
+  }
+  .container4 {
+    display: flex;
+    flex-direction: column;
+    background-color: #F9FAF8;
+    justify-content: center;
+    align-items: center;
+  }
+  .box {
+    display: flex;
+    justify-content: space-between;
+    background-color: #3882F6;
+    padding: 50px;
+    padding-left: 1000px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .box , p {
+    color: #F9FAF8;
+    justify-self: center;
   }
